@@ -1,6 +1,9 @@
 This file documents the revision history for the Mod-Gearman-Worker-Go
 
 
+next:
+          - send sigterm, then sigint and finally sigkill instead of immediate sigkill on timeout
+
 1.0.6    Fri Dec 14 16:29:57 CET 2018
           - improve reloading configuration
           - improve timeout handling
